--- a/index.html
+++ b/index.html
@@ -5,8 +5,136 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jolanta Galczynska - Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css?v=2">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/200c4f179e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <div id="root">
+        <header class="main-header">
+            <img src="images/logo.png" alt="my logo" id="logo" width="15%" height="15%">
+            <nav>
+                <ul>
+                    <li><a href="#aboutMe" class="link_color">About Me</a></li>
+                    <li><a href="https://github.com/Jolanta27" class="GH_hover">Github<i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" class="link_color">Linkedin<i
+                        class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/jolanta.galczynska" class="link_color">Facebook<i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="main_section">
+        <section class="main_section_layout">
+            <h1 class="first_section">
+                <span>Hello, I'm Jolanta</span>
+                <span>& I'm a 
+                    <span class="profession">Front-end developer</span>
+                </span>
+                <a type="button" href="images/Cv1.pdf" target="_blank" class="CV_button">Download CV</a>
+            </h1>
+            <img src="images/me.jpeg" alt="my picture" class="my_pic">
+        </section>
+        <section id="aboutMe">
+            <div>
+                <h2 class="about_me_introduction">About Me</h2> 
+                <span class="bottom_line"></span>
+                <div class="about_me_section">
+                <p class="description">I startet my journey with frontend development for to years ago and coding has been my new hobby and passion from that day. As I go forward in this process, I enjoy looking back and seeing where I have been a week ago, a month ago.</p>
+                <p class="description">I enjoy creating simple, clean and creative user interfaces using the latest web technologies.</p>
+                <p class="description">I have just scratched the surface, but I am excited to see what new opportunities await me in the future. I hope you can help me to get there by working together! :)</p>
+                <p class="description">When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
+            </div>
+        </div>
+            <div class="third_section">
+            <img src="images/laptop2.jpg" alt="work pic" width="350" height="350" >
+            <img src="images/laptop.jpg" alt="work1 pic" width="350" height="350">
+            <img src="images/laptop3.jpg" alt="work2 pic" width="350" height="350">
+        </div>
+    </section>
+      <div class="fourth_section">
+        <h2 class="about_me_introduction" >My Formula For Success</h2> 
+        <span class="bottom_line"></span>
+        <div class="process grid_area">
+            <div>
+                <i class="fas fa-file-alt"></i>
+                <h3>Don't give up!</h3>
+                <p><q>In the beginning, coding is hard. Continue to put in the work, celebrate the wins when you get them, and don't give up. It'll be worth in the end! Learn, test, strive to improve. You don’t fail unless you quit.</q></p>
+            </div>
+            <div>
+                <i class="fas fa-thumbs-up"></i>
+                <h3>Be disciplined!</h3>
+                <p><q>A highly skilled software engineer without discipline is like a veteran sailor without a map: really good at steering the boat, but can’t find shore.</q></p>
+            </div>
+            <div>
+                <i class="fas fa-desktop"></i>
+                <h3>Be comfortable with beeing uncomfortable!</h3>
+                <p><q>You have to be working on things that are difficult for you. Even if you are distraction-free and getting a lot of coding hours in. If you’re just building the same really simple app over and over again you won't be successful.</q></p>
+            </div>
+            <div>
+                <i class="fas fa-users"></i>
+                <h3>Be A Team Player!</h3>
+                <p><q>A good team worker is someone who is prepared to work on the project for the project. They are happy to not take the limelight and help others achieve they targets and objectives (as required) as they know that that in the long term will help benefit the company and team as a whole.</q></p>
+            </div>
+        </div>
+      </div>
+      <div class="fifth_section">
+        <h2 class="about_me_introduction" >Tech Stack</h2> 
+        <span class="bottom_line"></span>  
+        <p>HTML5</p>
+        <div class="skill-container">
+            <div class="skills html">100%</div>
+        </div>
+        <p>CSS3</p>
+        <div class="skill-container">
+            <div class="skills css">90%</div>
+        </div>
+        <p>RWD</p>
+        <div class="skill-container">
+            <div class="skills rwd">100%</div>
+        </div>
+        <p>JavaScript</p>
+        <div class="skill-container">
+            <div class="skills js">80%</div>
+        </div>
+        <p>SCSS/SASS</p>
+        <div class="skill-container">
+            <div class="skills sass">80%</div>
+        </div>
+        <p>React.js</p>
+        <div class="skill-container">
+            <div class="skills react">80%</div>
+        </div>
+        <p>TypeScript</p>
+        <div class="skill-container">
+            <div class="skills ts">50%</div>
+        </div>
+      </div>
+      <div class="sixth_section">
+          <div class="motivational_letter">
+              <p>I am a very ambitious and driven person who is highly organized and result-oriented.</p>
+                  <p>I love new challenges and learning new stuff and I can adapt quickly to new circumstances.</p> <p>I am focused on what I do and I always try to think proactively.</p> 
+                  <p>I have strong communication skills and have never had a problem to fit in with the team and be known with other people. </p>
+                  <p>My core values are commitment and professionalism so I try to be a professional in everything what I do with a positive mindset.</p>
+                      <p>I love to get things done and that always with a lots of determination.</p>
+          </div>
+          <img src="images/mentor.jpg" alt="mentor" width="350"class="mentor_words">
+      </div>
+    </div>
+    <br>
+    <footer id="main-footer">
+        <div class="footer-content container">
+        <p class="copyright">Copyright <i class="far fa-copyright"></i> 2020. All Rights Reserved.</p>
+        <div class="social">
+            <a href="https://github.com/Jolanta27"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/"><i
+                            class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/jolanta.galczynska"><i class="fab fa-facebook"></i></a>
+        </div>
+        </div>
+    </footer>
+   
+    <script src="index.js"></script>
 </body>
 </html>
