--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div id="root">
         <header class="main-header">
-            <img src="images/logo.png" alt="my logo" id="logo" width="15%" height="15%">
-            <nav>
+            <img src="images/logo.png" alt="my logo" id="logo" width="8%" height="8%">
+            <nav id="mainNav">
                 <ul>
                     <li><a href="#aboutMe" class="link_color">About Me</a></li>
                     <li><a href="https://github.com/Jolanta27" class="GH_hover">Github<i class="fab fa-github"></i></a></li>
@@ -25,8 +25,8 @@
             </nav>
         </header>
 
-        <div class="main_section">
-        <section class="main_section_layout">
+        <section class="main_section">
+        <div class="main_section_layout">
             <h1 class="first_section">
                 <span>Hello, I'm Jolanta</span>
                 <span>& I'm a 
@@ -35,8 +35,10 @@
                 <a type="button" href="images/Cv1.pdf" target="_blank" class="CV_button">Download CV</a>
             </h1>
             <img src="images/me.jpeg" alt="my picture" class="my_pic">
-        </section>
-        <section id="aboutMe">
+        </div>
+</section>
+<section >
+        <div id="aboutMe">
             <div>
                 <h2 class="about_me_introduction">About Me</h2> 
                 <span class="bottom_line"></span>
@@ -47,11 +49,12 @@
                 <p class="description">When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
             </div>
         </div>
-            <div class="third_section">
-            <img src="images/laptop2.jpg" alt="work pic" width="350" height="350" >
-            <img src="images/laptop.jpg" alt="work1 pic" width="350" height="350">
-            <img src="images/laptop3.jpg" alt="work2 pic" width="350" height="350">
+            <div class="small_pictures">
+            <img class="little_pic" src="images/laptop2.jpg" alt="work pic" width="350" height="350" >
+            <img class="little_pic" src="images/laptop.jpg" alt="work1 pic" width="350" height="350">
+            <img class="little_pic" src="images/laptop3.jpg" alt="work2 pic" width="350" height="350">
         </div>
+    </div>
     </section>
       <div class="fourth_section">
         <h2 class="about_me_introduction" >My Formula For Success</h2> 
@@ -121,7 +124,7 @@
           </div>
           <img src="images/mentor.jpg" alt="mentor" width="350"class="mentor_words">
       </div>
-    </div>
+    </section>
     <br>
     <footer id="main-footer">
         <div class="footer-content container">
