animatable and responsive elements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li><a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" class="link_color">Linkedin<i
                         class="fab fa-linkedin"></i></a></li>
                         <li><a href="https://www.facebook.com/jolanta.galczynska" class="link_color">Facebook<i class="fab fa-facebook"></i></a></li>
+                        <li><a><i class="fa fa-bars"></i></a><li>
                 </ul>
             </nav>
         </header>
@@ -43,21 +44,21 @@
                 <h2 class="about_me_introduction">About Me</h2> 
                 <span class="bottom_line"></span>
                 <div class="about_me_section">
-                <p class="description">I startet my journey with frontend development for to years ago and coding has been my new hobby and passion from that day. As I go forward in this process, I enjoy looking back and seeing where I have been a week ago, a month ago.</p>
-                <p class="description">I enjoy creating simple, clean and creative user interfaces using the latest web technologies.</p>
-                <p class="description">I have just scratched the surface, but I am excited to see what new opportunities await me in the future. I hope you can help me to get there by working together! :)</p>
-                <p class="description">When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
+                <p>I startet my journey with frontend development for to years ago and coding has been my new hobby and passion from that day. As I go forward in this process, I enjoy looking back and seeing where I have been a week ago, a month ago.</p>
+                <p>I enjoy creating simple, clean and creative user interfaces using the latest web technologies.</p>
+                <p>I have just scratched the surface, but I am excited to see what new opportunities await me in the future. I hope you can help me to get there by working together! :)</p>
+                <p>When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
             </div>
         </div>
             <div class="small_pictures">
             <img class="little_pic" src="images/laptop2.jpg" alt="work pic" width="350" height="350" >
-            <img class="little_pic" src="images/laptop.jpg" alt="work1 pic" width="350" height="350">
-            <img class="little_pic" src="images/laptop3.jpg" alt="work2 pic" width="350" height="350">
+            <img class="little_pic little_pic_1" src="images/laptop.jpg" alt="work1 pic" width="350" height="350">
+            <img class="little_pic little_pic_1" src="images/laptop3.jpg" alt="work2 pic" width="350" height="350">
         </div>
     </div>
     </section>
       <div class="fourth_section">
-        <h2 class="about_me_introduction" >My Formula For Success</h2> 
+        <h2>My Formula For Success</h2> 
         <span class="bottom_line"></span>
         <div class="process grid_area">
             <div>
@@ -83,7 +84,7 @@
         </div>
       </div>
       <div class="fifth_section">
-        <h2 class="about_me_introduction" >Tech Stack</h2> 
+        <h2>Tech Stack</h2> 
         <span class="bottom_line"></span>  
         <p>HTML5</p>
         <div class="skill-container">
@@ -122,7 +123,7 @@
                   <p>My core values are commitment and professionalism so I try to be a professional in everything what I do with a positive mindset.</p>
                       <p>I love to get things done and that always with a lots of determination.</p>
           </div>
-          <img src="images/mentor.jpg" alt="mentor" width="350"class="mentor_words">
+          <img src="images/mentor.jpg" alt="mentor" width="350"class="mentor_pic">
       </div>
     </section>
     <br>
