add toggle button to mobile version of navbar

--- a/index.html
+++ b/index.html
@@ -11,17 +11,26 @@
     <script src="https://kit.fontawesome.com/200c4f179e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="root">
         <header class="main-header">
+            <span class="navbar-toggle" id="js-navbar-toggle">
+                <i class="fas fa-bars"></i>
+            </span>
             <img src="images/logo.png" alt="my logo" id="logo" width="8%" height="8%">
             <nav id="mainNav">
-                <ul>
-                    <li><a href="#aboutMe" class="link_color">About Me</a></li>
-                    <li><a href="https://github.com/Jolanta27" class="GH_hover">Github<i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" class="link_color">Linkedin<i
-                        class="fab fa-linkedin"></i></a></li>
-                        <li><a href="https://www.facebook.com/jolanta.galczynska" class="link_color">Facebook<i class="fab fa-facebook"></i></a></li>
-                        <li><a><i class="fa fa-bars"></i></a><li>
+                <ul class="main-nav" id="js-menu">
+                    <li>
+                        <a href="#aboutMe" class="link_color">About Me</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Jolanta27" class="GH_hover">Github<i class="fab fa-github"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" class="link_color">Linkedin<i
+                        class="fab fa-linkedin"></i></a>
+                    </li>
+                        <li>
+                            <a href="https://www.facebook.com/jolanta.galczynska" class="link_color">Facebook<i class="fab fa-facebook"></i></a>
+                        </li>
                 </ul>
             </nav>
         </header>
