add scroll back to top button

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         </header>
 
         <section class="main_section">
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         <div class="main_section_layout">
             <h1 class="first_section">
-                <span>Hello, I'm Jolanta</span>
-                <span>& I'm a 
+                <span class="span_me">Hello, I'm Jolanta</span>
+                <span class="span_me">& I'm a 
                     <span class="profession">Front-end developer</span>
                 </span>
                 <a type="button" href="images/Cv1.pdf" target="_blank" class="CV_button">Download CV</a>
