small diverse changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
       </div>
-      <div class="fifth_section">
+      <div id="myProgress">
         <h2>Tech Stack</h2> 
         <span class="bottom_line"></span>  
         <p>HTML5</p>
