made more DRY header section

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
     <script src="https://kit.fontawesome.com/200c4f179e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-        <header class="main-header">
-            <span class="navbar-toggle" id="js-navbar-toggle">
+        <header>
+            <span id="js-navbar-toggle">
                 <i class="fas fa-bars"></i>
             </span>
-            <img src="images/logo.png" alt="my logo" id="logo" width="8%" height="8%">
+            <img src="images/logo.png" alt="logo" id="logo" width="8%" height="8%">
             <nav id="mainNav">
                 <ul class="main-nav" id="js-menu">
                     <li>
-                        <a href="#aboutMe" class="link_color">About Me</a>
+                        <a href="#aboutMe">About Me</a>
                     </li>
                     <li>
                         <a href="https://github.com/Jolanta27" class="GH_hover">Github<i class="fab fa-github"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" class="link_color">Linkedin<i
+                        <a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/">Linkedin<i
                         class="fab fa-linkedin"></i></a>
                     </li>
                         <li>
-                            <a href="https://www.facebook.com/jolanta.galczynska" class="link_color">Facebook<i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/jolanta.galczynska">Facebook<i class="fab fa-facebook"></i></a>
                         </li>
-                </ul>
+                     </ul>
             </nav>
         </header>
 
