DRY styling with sass

--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
             </nav>
         </header>
 
-        <section class="main_section">
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        <div class="main_section_layout">
-            <h1 class="first_section">
-                <span class="span_me">Hello, I'm Jolanta</span>
-                <span class="span_me">& I'm a 
-                    <span class="profession">Front-end developer</span>
+ <section>
+         <button onclick="topFunction()" id="myBtn" title="Go to     top">Top</button>
+        <div>
+            <h1>
+                <span>Hello, I'm Jolanta</span>
+                <span>& I'm a 
+                <span class="profession">Front-end developer</span>
                 </span>
-                <a type="button" href="images/Cv1.pdf" target="_blank" class="CV_button">Download CV</a>
+                <a type="button" href="images/Cv1.pdf" target="_blank" class="my_button">Download CV</a>
             </h1>
             <img src="images/me.jpeg" alt="my picture" class="my_pic">
         </div>
 </section>
-<section >
+
+<section>
         <div id="aboutMe">
             <div>
                 <h2 class="about_me_introduction">About Me</h2> 
@@ -67,6 +68,7 @@
         </div>
     </div>
     </section>
+    <section>
       <div class="fourth_section">
         <h2>My Formula For Success</h2> 
         <span class="bottom_line"></span>
