fixing layout on the site

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                     future. I hope you can help me to get there by working together! &#128516;</p>
                 <p>When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
             </div>
-        </div>
-        <div>
+
             <img class="little_pic laptop" src="images/laptop2.jpg" alt="work" width="350" height="350">
             <img class="little_pic laptop" src="images/laptop.jpg" alt="work" width="350" height="350">
             <img class="little_pic" src="images/laptop3.jpg" alt="work" width="350" height="350">
@@ -76,27 +75,27 @@
             <h2>My Formula For Success</h2>
             <span class="line"></span>
             <div>
-                <div>
+                <div class="my_rules">
                     <i class="fas fa-file-alt"></i>
                     <h3>Don't give up!</h3>
                     <p><q>In the beginning, coding is hard. Continue to put in the work, celebrate the wins when you get
                             them, and don't give up. It'll be worth in the end! Learn, test, strive to improve. You
                             don’t fail unless you quit.</q></p>
                 </div>
-                <div>
+                <div class="my_rules">
                     <i class="fas fa-thumbs-up"></i>
                     <h3>Be disciplined!</h3>
                     <p><q>A highly skilled software engineer without discipline is like a veteran sailor without a map:
                             really good at steering the boat, but can’t find shore.</q></p>
                 </div>
-                <div>
+                <div class="my_rules">
                     <i class="fas fa-desktop"></i>
                     <h3>Be comfortable with beeing uncomfortable!</h3>
                     <p><q>You have to be working on things that are difficult for you. Even if you are distraction-free
                             and getting a lot of coding hours in. If you’re just building the same really simple app
                             over and over again you won't be successful.</q></p>
                 </div>
-                <div>
+                <div class="my_rules">
                     <i class="fas fa-users"></i>
                     <h3>Be A Team Player!</h3>
                     <p><q>A good team worker is someone who is prepared to work on the project for the project. They are
@@ -110,33 +109,15 @@
             <h2>Tech Stack</h2>
             <span class="line"></span>
             <p>HTML5</p>
-            <div>
-                <div class="html">100%</div>
-            </div>
             <p>CSS3</p>
-            <div>
-                <div class="css">100%</div>
-            </div>
             <p>RWD</p>
-            <div>
-                <div class="rwd">100%</div>
-            </div>
             <p>JavaScript</p>
-            <div>
-                <div class="js">80%</div>
-            </div>
             <p>SCSS/SASS</p>
-            <div>
-                <div class="sass">100%</div>
-            </div>
             <p>React.js</p>
-            <div>
-                <div class="react">80%</div>
-            </div>
+            <p>Node.js</p>
+            <p>MongoDB</p>
             <p>TypeScript</p>
-            <div>
-                <div class="ts">50%</div>
-            </div>
+            <p>Git</p>
         </div>
         <div class="last_section">
             <div>
