added some animation to hovers

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
                 <p>I enjoy creating simple, clean and creative user interfaces using the latest web technologies.</p>
                 <p>I have just scratched the surface, but I am excited to see what new opportunities await me in the
                     future. I hope you can help me to get there by working together! &#128516;</p>
-                <p>When not coding, I'm likely reading business books, travelling the world or being at the gym.</p>
+                <p>I'm currently looking for new opportunities and my inbox is always open. Whether you have a question
+                    or just want to say hi, I'll try my best to get back to you!</p>
             </div>
-
-            <img class="little_pic laptop" src="images/laptop2.jpg" alt="work" width="350" height="350">
-            <img class="little_pic laptop" src="images/laptop.jpg" alt="work" width="350" height="350">
-            <img class="little_pic" src="images/laptop3.jpg" alt="work" width="350" height="350">
+            <div class="pictures">
+                <img class="little_pic laptop" src="images/laptop2.jpg" alt="work" width="350" height="350">
+                <img class="little_pic laptop" src="images/laptop.jpg" alt="work" width="350" height="350">
+                <img class="little_pic" src="images/laptop3.jpg" alt="work" width="350" height="350">
+            </div>
         </div>
     </section>
     <section>
@@ -115,22 +117,20 @@
             <p>SCSS/SASS</p>
             <p>React.js</p>
             <p>Node.js</p>
-            <p>MongoDB</p>
-            <p>TypeScript</p>
             <p>Git</p>
         </div>
         <div class="last_section">
             <div>
-                <p>I am a very ambitious and driven person who is highly organized and result-oriented.</p>
+                <p>I am very ambitious and driven person who is highly organized and result-oriented.</p>
                 <p>I love new challenges and learning new stuff and I can adapt quickly to new circumstances.<p>
                         <p>I am focused on what I do and I always try to think proactively.</p>
-                        <p>I have strong communication skills and have never had a problem to fit in with the team and
+                        <p>I have strong communication skills and have never had problems to fit in with the team and
                             be known with other people. </p>
                         <p>My core values are commitment and professionalism so I try to be a professional in everything
                             what I do with a positive mindset.</p>
                         <p>I love to get things done and that always with a lots of determination.</p>
             </div>
-            <img src="images/mentor.jpg" alt="mentor" width="350">
+            <img class="mentor" src="images/mentor.jpg" alt="mentor" width="350">
         </div>
     </section>
     <footer>
