fixed tech stack elements as grid elements and added animation to them

--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@
         <div class="progress">
             <h2>Tech Stack</h2>
             <span class="line"></span>
-            <p>HTML5</p>
-            <p>CSS3</p>
-            <p>RWD</p>
-            <p>JavaScript</p>
-            <p>SCSS/SASS</p>
-            <p>React.js</p>
-            <p>Node.js</p>
-            <p>Git</p>
+            <div class="progress_">
+                <p>HTML5</p>
+                <p>CSS3</p>
+                <p>RWD</p>
+                <p>JavaScript</p>
+                <p>SCSS/SASS</p>
+                <p>React.js</p>
+                <p>Node.js</p>
+                <p>Git</p>
+            </div>
         </div>
         <div class="last_section">
             <div>
