last small changes and fixing working on different browsers

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     or just want to say hi, I'll try my best to get back to you!</p>
             </div>
             <div class="pictures">
-                <img class="little_pic laptop" src="images/laptop2.jpg" alt="work" width="350" height="350">
-                <img class="little_pic laptop" src="images/laptop.jpg" alt="work" width="350" height="350">
+                <img class="little_pic" src="images/laptop2.jpg" alt="work" width="350" height="350">
+                <img class="little_pic" src="images/laptop.jpg" alt="work" width="350" height="350">
                 <img class="little_pic" src="images/laptop3.jpg" alt="work" width="350" height="350">
             </div>
         </div>
@@ -78,27 +78,27 @@
             <span class="line"></span>
             <div>
                 <div class="my_rules">
-                    <i class="fas fa-file-alt"></i>
+                    <i class="fas fa-file-alt success"></i>
                     <h3>Don't give up!</h3>
                     <p><q>In the beginning, coding is hard. Continue to put in the work, celebrate the wins when you get
                             them, and don't give up. It'll be worth in the end! Learn, test, strive to improve. You
                             don’t fail unless you quit.</q></p>
                 </div>
                 <div class="my_rules">
-                    <i class="fas fa-thumbs-up"></i>
+                    <i class="fas fa-thumbs-up success"></i>
                     <h3>Be disciplined!</h3>
                     <p><q>A highly skilled software engineer without discipline is like a veteran sailor without a map:
                             really good at steering the boat, but can’t find shore.</q></p>
                 </div>
                 <div class="my_rules">
-                    <i class="fas fa-desktop"></i>
+                    <i class="fas fa-desktop success"></i>
                     <h3>Be comfortable with beeing uncomfortable!</h3>
                     <p><q>You have to be working on things that are difficult for you. Even if you are distraction-free
                             and getting a lot of coding hours in. If you’re just building the same really simple app
                             over and over again you won't be successful.</q></p>
                 </div>
                 <div class="my_rules">
-                    <i class="fas fa-users"></i>
+                    <i class="fas fa-users success"></i>
                     <h3>Be A Team Player!</h3>
                     <p><q>A good team worker is someone who is prepared to work on the project for the project. They are
                             happy to not take the limelight and help others achieve they targets and objectives (as
