--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
     <section>
         <div id="aboutMe">
-            <h2>About Me</h2>
+            <h2 class="about_u_pic">About Me</h2>
             <span class="line"></span>
             <div class="description">
                 <p>I startet my journey with frontend development for to years ago and coding has been my new hobby and
@@ -137,7 +137,7 @@
     </section>
     <footer>
         <div>
-            <p>Copyright <i class="far fa-copyright"></i> 2020. All Rights Reserved.</p>
+            <p>Copyright <i class="far fa-copyright"></i> 2021. All Rights Reserved.</p>
             <div>
                 <a href="https://github.com/Jolanta27" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/jolanta-galczynska-62554a16b/" target="_blank"><i
