--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>& I'm a
                     <span id="profession">Front-end developer</span>
                 </span>
-                <a href="images/minCV.pdf" target="_blank" id="my_button">Download CV</a>
+                <a href="images/minCV2.pdf" target="_blank" id="my_button">Download CV</a>
             </div>
             <img src="images/me.jpeg" alt="my picture" id="my_pic">
         </div>
